# web3-policy-engine

./: .readthedocs.yml  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
api/: main.py  schemas.py
api/data/: permissions.yml
data/local_data/: test_config.yml  test_contract_addresses.json
data/local_data/abi/: test_abi.json
docs/: conf.py  configuration.rst  index.rst  usage.rst  web3_policy_engine.rst
tests/: test_basic.py  test_integrations.py  test_parse.py  test_verify.py  utils_for_tests.py
tests/data/: test_config.yml  test_config_invalid.yml  test_contract_addresses.json  test_groups.yml
tests/data/abi/: ERC20.json  test_abi.json
web3_policy_engine/: __init__.py  contract_common.py  loader.py  parse_transaction.py  policy_engine.py  schemas.py  verify_permissions.py
