[tool.poetry]
name = "web3-policy-engine"
version = "0.1.0"
description = ""
authors = ["Daniel Neshyba-Rowe <daniel.rowe@playgroundlabs.io>"]

[tool.poetry.dependencies]
python = "^3.10"
unittest = "^0.0"
web3 = "^5.29.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
coverage = "^6.4.2"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
