[tool.poetry]
name = "web3-policy-engine"
version = "0.1.0"
description = ""
authors = ["Daniel Neshyba-Rowe <daniel.rowe@playgroundlabs.io>"]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^5.29.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
unittest = "^0.0"
black = "^22.3.0"
coverage = "^6.4.2"
mypy = "^0.961"
pylint = "^2.14.4"
types-PyYAML = "^6.0.10"
types-requests = "^2.28.1"
types-setuptools = "^63.2.0"
types-urllib3 = "1.26.16"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-apidoc = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"